addを三回やってみた

--- a/git-practice.html
+++ b/git-practice.html
@@ -8,5 +8,11 @@
 <body>
     <h1>git練習中です。</h1>
     <p>二回目のpushです。</p>
+
+    <p>addの一回目です</p>
+
+    <p>addの二回目です</p>
+
+    <p>addの三回目です</p>
 </body>
 </html>
